# Diary_Management

./: CMakeLists.txt  README.md  color_management.c  color_management.h  colors.c  colors.h  error.c  error.h  level_cells.c  level_cells.h  level_lists.c  level_lists.h  main.c  timer.c
